Tools/Convert_GL.h_and_GLext.h_C-Include/oglGLext.h

 void  glBlendFuncSeparate (GLenum sfactorRGB, GLenum dfactorRGB, GLenum sfactorAlpha, GLenum dfactorAlpha);
 void  glMultiDrawArrays (GLenum mode,GLint *first,GLsizei *count, GLsizei drawcount);
 void  glMultiDrawElements (GLenum mode,GLsizei *count, GLenum type,void **indices, GLsizei drawcount);
 void  glPointParameterf (GLenum pname, GLfloat param);
 void  glPointParameterfv (GLenum pname,GLfloat *params);
 void  glPointParameteri (GLenum pname, GLint param);
 void  glPointParameteriv (GLenum pname,GLint *params);
 void  glBlendColor (GLfloat red, GLfloat green, GLfloat blue, GLfloat alpha);
 void  glBlendEquation (GLenum mode);
typedef khronos_ssize_t GLsizeiptr;
typedef khronos_intptr_t GLintptr;
 void  glGenQueries (GLsizei n, GLuint *ids);
 void  glDeleteQueries (GLsizei n,GLuint *ids);
 GLboolean  glIsQuery (GLuint id);
 void  glBeginQuery (GLenum target, GLuint id);
 void  glEndQuery (GLenum target);
 void  glGetQueryiv (GLenum target, GLenum pname, GLint *params);
 void  glGetQueryObjectiv (GLuint id, GLenum pname, GLint *params);
 void  glGetQueryObjectuiv (GLuint id, GLenum pname, GLuint *params);
 void  glBindBuffer (GLenum target, GLuint buffer);
 void  glDeleteBuffers (GLsizei n,GLuint *buffers);
 void  glGenBuffers (GLsizei n, GLuint *buffers);
 GLboolean  glIsBuffer (GLuint buffer);
 void  glBufferData (GLenum target, GLsizeiptr size,void *data, GLenum usage);
 void  glBufferSubData (GLenum target, GLintptr offset, GLsizeiptr size,void *data);
 void  glGetBufferSubData (GLenum target, GLintptr offset, GLsizeiptr size, void *data);
 void * glMapBuffer (GLenum target, GLenum access);
 GLboolean  glUnmapBuffer (GLenum target);
 void  glGetBufferParameteriv (GLenum target, GLenum pname, GLint *params);
 void  glGetBufferPointerv (GLenum target, GLenum pname, void **params);
typedef char GLchar;
 void  glBlendEquationSeparate (GLenum modeRGB, GLenum modeAlpha);
 void  glDrawBuffers (GLsizei n,GLenum *bufs);
 void  glStencilOpSeparate (GLenum face, GLenum sfail, GLenum dpfail, GLenum dppass);
 void  glStencilFuncSeparate (GLenum face, GLenum func, GLint ref, GLuint mask);
 void  glStencilMaskSeparate (GLenum face, GLuint mask);
 void  glAttachShader (GLuint program_, GLuint shader);
 void  glBindAttribLocation (GLuint program_, GLuint index,GLchar *name);
 void  glCompileShader (GLuint shader);
 GLuint  glCreateProgram (void);
 GLuint  glCreateShader (GLenum type);
 void  glDeleteProgram (GLuint program_);
 void  glDeleteShader (GLuint shader);
 void  glDetachShader (GLuint program_, GLuint shader);
 void  glDisableVertexAttribArray (GLuint index);
 void  glEnableVertexAttribArray (GLuint index);
 void  glGetActiveAttrib (GLuint program_, GLuint index, GLsizei bufSize, GLsizei *length, GLint *size, GLenum *type, GLchar *name);
 void  glGetActiveUniform (GLuint program_, GLuint index, GLsizei bufSize, GLsizei *length, GLint *size, GLenum *type, GLchar *name);
 void  glGetAttachedShaders (GLuint program_, GLsizei maxCount, GLsizei *count, GLuint *shaders);
 GLint  glGetAttribLocation (GLuint program_,GLchar *name);
 void  glGetProgramiv (GLuint program_, GLenum pname, GLint *params);
 void  glGetProgramInfoLog (GLuint program_, GLsizei bufSize, GLsizei *length, GLchar *infoLog);
 void  glGetShaderiv (GLuint shader, GLenum pname, GLint *params);
 void  glGetShaderInfoLog (GLuint shader, GLsizei bufSize, GLsizei *length, GLchar *infoLog);
 void  glGetShaderSource (GLuint shader, GLsizei bufSize, GLsizei *length, GLchar *source);
 GLint  glGetUniformLocation (GLuint program_,GLchar *name);
 void  glGetUniformfv (GLuint program_, GLint location, GLfloat *params);
 void  glGetUniformiv (GLuint program_, GLint location, GLint *params);
 void  glGetVertexAttribdv (GLuint index, GLenum pname, GLdouble *params);
 void  glGetVertexAttribfv (GLuint index, GLenum pname, GLfloat *params);
 void  glGetVertexAttribiv (GLuint index, GLenum pname, GLint *params);
 void  glGetVertexAttribPointerv (GLuint index, GLenum pname, void **pointer);
 GLboolean  glIsProgram (GLuint program_);
 GLboolean  glIsShader (GLuint shader);
 void  glLinkProgram (GLuint program_);
 void  glShaderSource (GLuint shader, GLsizei count,GLchar **string,GLint *length);
 void  glUseProgram (GLuint program_);
 void  glUniform1f (GLint location, GLfloat v0);
 void  glUniform2f (GLint location, GLfloat v0, GLfloat v1);
 void  glUniform3f (GLint location, GLfloat v0, GLfloat v1, GLfloat v2);
 void  glUniform4f (GLint location, GLfloat v0, GLfloat v1, GLfloat v2, GLfloat v3);
 void  glUniform1i (GLint location, GLint v0);
 void  glUniform2i (GLint location, GLint v0, GLint v1);
 void  glUniform3i (GLint location, GLint v0, GLint v1, GLint v2);
 void  glUniform4i (GLint location, GLint v0, GLint v1, GLint v2, GLint v3);
 void  glUniform1fv (GLint location, GLsizei count,GLfloat *value);
 void  glUniform2fv (GLint location, GLsizei count,GLfloat *value);
 void  glUniform3fv (GLint location, GLsizei count,GLfloat *value);
 void  glUniform4fv (GLint location, GLsizei count,GLfloat *value);
 void  glUniform1iv (GLint location, GLsizei count,GLint *value);
 void  glUniform2iv (GLint location, GLsizei count,GLint *value);
 void  glUniform3iv (GLint location, GLsizei count,GLint *value);
 void  glUniform4iv (GLint location, GLsizei count,GLint *value);