Versuche/LCL-native_glad/glad_gl.pas

  glBlendFuncSeparate: procedure(sfactorRGB: GLenum; dfactorRGB: GLenum; sfactorAlpha: GLenum; dfactorAlpha: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glMultiDrawArrays: procedure(mode: GLenum; First: PGLint; Count: PGLsizei; drawcount: GLsizei); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glMultiDrawElements: procedure(mode: GLenum; Count: PGLsizei; type_: GLenum; indices: PPointer; drawcount: GLsizei); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glPointParameterf: procedure(pname: GLenum; param: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glPointParameterfv: procedure(pname: GLenum; params: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glPointParameteri: procedure(pname: GLenum; param: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glPointParameteriv: procedure(pname: GLenum; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBlendColor: procedure(red: GLfloat; green: GLfloat; blue: GLfloat; alpha: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBlendEquation: procedure(mode: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGenQueries: procedure(n: GLsizei; ids: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glDeleteQueries: procedure(n: GLsizei; ids: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glIsQuery: function(id: GLuint): GLboolean; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBeginQuery: procedure(target: GLenum; id: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glEndQuery: procedure(target: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetQueryiv: procedure(target: GLenum; pname: GLenum; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetQueryObjectiv: procedure(id: GLuint; pname: GLenum; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetQueryObjectuiv: procedure(id: GLuint; pname: GLenum; params: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBindBuffer: procedure(target: GLenum; buffer: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glDeleteBuffers: procedure(n: GLsizei; buffers: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGenBuffers: procedure(n: GLsizei; buffers: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glIsBuffer: function(buffer: GLuint): GLboolean; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBufferData: procedure(target: GLenum; size: GLsizeiptr; Data: Pointer; usage: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBufferSubData: procedure(target: GLenum; offset: GLintptr; size: GLsizeiptr; Data: Pointer); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetBufferSubData: procedure(target: GLenum; offset: GLintptr; size: GLsizeiptr; Data: Pointer); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glMapBuffer: function(target: GLenum; access: GLenum): Pointer; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUnmapBuffer: function(target: GLenum): GLboolean; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetBufferParameteriv: procedure(target: GLenum; pname: GLenum; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetBufferPointerv: procedure(target: GLenum; pname: GLenum; params: PPointer); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBlendEquationSeparate: procedure(modeRGB: GLenum; modeAlpha: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glDrawBuffers: procedure(n: GLsizei; bufs: PGLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glStencilOpSeparate: procedure(face: GLenum; sfail: GLenum; dpfail: GLenum; dppass: GLenum); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glStencilFuncSeparate: procedure(face: GLenum; func: GLenum; ref: GLint; mask: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glStencilMaskSeparate: procedure(face: GLenum; mask: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glAttachShader: procedure(program_: GLuint; shader: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glBindAttribLocation: procedure(program_: GLuint; index: GLuint; Name: PGLchar); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glCompileShader: procedure(shader: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glCreateProgram: function(): GLuint; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glCreateShader: function(type_: GLenum): GLuint; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glDeleteProgram: procedure(program_: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glDeleteShader: procedure(shader: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glDetachShader: procedure(program_: GLuint; shader: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glDisableVertexAttribArray: procedure(index: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glEnableVertexAttribArray: procedure(index: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetActiveAttrib: procedure(program_: GLuint; index: GLuint; bufSize: GLsizei; length: PGLsizei; size: PGLint; type_: PGLenum; Name: PGLchar); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetActiveUniform: procedure(program_: GLuint; index: GLuint; bufSize: GLsizei; length: PGLsizei; size: PGLint; type_: PGLenum; Name: PGLchar); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetAttachedShaders: procedure(program_: GLuint; maxCount: GLsizei; Count: PGLsizei; shaders: PGLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetAttribLocation: function(program_: GLuint; Name: PGLchar): GLint; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetProgramiv: procedure(program_: GLuint; pname: GLenum; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetProgramInfoLog: procedure(program_: GLuint; bufSize: GLsizei; length: PGLsizei; infoLog: PGLchar); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetShaderiv: procedure(shader: GLuint; pname: GLenum; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetShaderInfoLog: procedure(shader: GLuint; bufSize: GLsizei; length: PGLsizei; infoLog: PGLchar); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetShaderSource: procedure(shader: GLuint; bufSize: GLsizei; length: PGLsizei; Source: PGLchar); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetUniformLocation: function(program_: GLuint; Name: PGLchar): GLint; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetUniformfv: procedure(program_: GLuint; location: GLint; params: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetUniformiv: procedure(program_: GLuint; location: GLint; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetVertexAttribdv: procedure(index: GLuint; pname: GLenum; params: PGLdouble); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetVertexAttribfv: procedure(index: GLuint; pname: GLenum; params: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetVertexAttribiv: procedure(index: GLuint; pname: GLenum; params: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glGetVertexAttribPointerv: procedure(index: GLuint; pname: GLenum; pointer: PPointer); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glIsProgram: function(program_: GLuint): GLboolean; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glIsShader: function(shader: GLuint): GLboolean; {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glLinkProgram: procedure(program_: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glShaderSource: procedure(shader: GLuint; Count: GLsizei; string_: PPGLchar; length: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUseProgram: procedure(program_: GLuint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform1f: procedure(location: GLint; v0: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform2f: procedure(location: GLint; v0: GLfloat; v1: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform3f: procedure(location: GLint; v0: GLfloat; v1: GLfloat; v2: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform4f: procedure(location: GLint; v0: GLfloat; v1: GLfloat; v2: GLfloat; v3: GLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform1i: procedure(location: GLint; v0: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform2i: procedure(location: GLint; v0: GLint; v1: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform3i: procedure(location: GLint; v0: GLint; v1: GLint; v2: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform4i: procedure(location: GLint; v0: GLint; v1: GLint; v2: GLint; v3: GLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform1fv: procedure(location: GLint; Count: GLsizei; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform2fv: procedure(location: GLint; Count: GLsizei; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform3fv: procedure(location: GLint; Count: GLsizei; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform4fv: procedure(location: GLint; Count: GLsizei; Value: PGLfloat); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform1iv: procedure(location: GLint; Count: GLsizei; Value: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform2iv: procedure(location: GLint; Count: GLsizei; Value: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform3iv: procedure(location: GLint; Count: GLsizei; Value: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
  glUniform4iv: procedure(location: GLint; Count: GLsizei; Value: PGLint); {$IF Defined(Windows) or Defined(MSWindows)} stdcall;{$ELSE} cdecl;{$ENDIF}
